src/compiler.output
Terminals unused in grammar

   CONCAT


Grammar

    0 $accept: main $end

    1 main: PROCEDURE IDENTIFIER IS declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'

    2 actual_parameter_list: expression expression_list

    3 actual_parameter_part: '(' ')'
    4                      | '(' actual_parameter_list ')'

    5 array_type_definition: ARRAY '(' expression expression_list ')' OF type_definition

    6 assign_expression: ASSIGNMENT_OP expression
    7                  | /* empty */

    8 assignment_statement: variable ASSIGNMENT_OP expression ';'

    9 binary_adding_list: binary_adding_operator term
   10                   | binary_adding_operator term binary_adding_list

   11 binary_adding_operator: '+'
   12                       | '-'

   13 case_statement: CASE IDENTIFIER IS case_statement_alternative_list END CASE ';'

   14 case_statement_alternative: WHEN discrete_choice_list ARROW sequence_of_statements

   15 case_statement_alternative_list: case_statement_alternative_list case_statement_alternative
   16                                | /* empty */

   17 component_item: IDENTIFIER identifier_list ':' type_definition assign_expression ';'

   18 component_list: component_list component_item
   19               | /* empty */

   20 compound_statement: if_statement
   21                   | loop_statement
   22                   | case_statement
   23                   | assignment_statement

   24 constant: CONSTANT
   25         | /* empty */

   26 declarative_item: type_declaration
   27                 | object_declaration
   28                 | subprogram_specification ';'
   29                 | subprogram_body

   30 declarative_part: declarative_item declarative_part
   31                 | /* empty */

   32 discrete_choice: expression
   33                | INTEGER_TYPE
   34                | OTHERS

   35 discrete_choice_list: discrete_choice_list '|' discrete_choice
   36                     | discrete_choice
   37                     | /* empty */

   38 elsif_list: elsif_list elsif_statement
   39           | /* empty */

   40 else_statement: ELSE sequence_of_statements
   41               | /* empty */

   42 elsif_statement: ELSIF expression THEN sequence_of_statements

   43 expression: relation relation_list

   44 expression_list: ',' expression expression_list
   45                | /* empty */

   46 factor: primary
   47       | primary POWER_OP primary
   48       | NOT primary

   49 formal_part: '(' parameter_specification parameter_specification_list ')'
   50            | /* empty */

   51 function_call: IDENTIFIER actual_parameter_part
   52              | IDENTIFIER LENGTH

   53 function_specification: FUNCTION IDENTIFIER formal_part RETURN type_definition

   54 identifier_list: ',' IDENTIFIER identifier_list
   55                | /* empty */

   56 if_statement: IF expression THEN sequence_of_statements elsif_list else_statement END IF ';'

   57 indexed_component: IDENTIFIER '[' expression expression_list ']'

   58 logical_operator: AND
   59                 | OR

   60 loop_statement: WHILE expression LOOP sequence_of_statements END LOOP ';'

   61 mode: OUT
   62     | IN OUT
   63     | IN
   64     | /* empty */

   65 multiplying_operator: '*'
   66                     | '/'

   67 null_statement: NULL_ ';'

   68 object_declaration: IDENTIFIER identifier_list ':' constant type_definition assign_expression ';'

   69 parameter_specification: IDENTIFIER identifier_list ':' mode type_definition assign_expression

   70 parameter_specification_list: ';' parameter_specification parameter_specification_list
   71                             | /* empty */

   72 primary: INTEGER_LITERAL
   73        | FLOAT_LITERAL
   74        | CHARACTER_LITERAL
   75        | BOOLEAN_LITERAL
   76        | NULL_
   77        | STRING_LITERAL
   78        | variable
   79        | function_call
   80        | '(' expression ')'

   81 procedure_call_statement: IDENTIFIER actual_parameter_part ';'
   82                         | PUT '(' STRING_LITERAL ')' ';'
   83                         | PUT '(' variable ')' ';'
   84                         | GET '(' variable ')' ';'
   85                         | NEW_LINE ';'

   86 procedure_specification: PROCEDURE IDENTIFIER formal_part

   87 record_type_definition: RECORD component_list END RECORD

   88 relation: simple_expression
   89         | simple_expression relational_operator simple_expression

   90 relation_list: logical_operator relation relation_list
   91              | /* empty */

   92 relational_operator: '='
   93                    | '<'
   94                    | '>'
   95                    | NOT_EQUAL_OP
   96                    | LESSER_EQUAL_OP
   97                    | GREATER_EQUAL_OP

   98 return_statement: RETURN ';'
   99                 | RETURN simple_expression ';'

  100 selected_component: variable '.' IDENTIFIER

  101 sequence_of_statements: statement
  102                       | statement sequence_of_statements

  103 simple_expression: unary_adding_operator term binary_adding_list
  104                  | unary_adding_operator term
  105                  | term binary_adding_list
  106                  | term

  107 simple_statement: null_statement
  108                 | return_statement
  109                 | procedure_call_statement

  110 statement: simple_statement
  111          | compound_statement

  112 subprogram_body_: subprogram_specification IS

  113 subprogram_body: subprogram_body_ declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
  114                | subprogram_body_ declarative_part BEGIN_ sequence_of_statements END ';'

  115 subprogram_specification: procedure_specification
  116                         | function_specification

  117 term: factor
  118     | term multiplying_operator factor

  119 type_declaration: TYPE IDENTIFIER IS type_definition ';'

  120 type_definition: INTEGER_TYPE
  121                | REAL_TYPE
  122                | CHARACTER_TYPE
  123                | BOOLEAN_TYPE
  124                | array_type_definition
  125                | record_type_definition
  126                | IDENTIFIER

  127 unary_adding_operator: '+'
  128                      | '-'

  129 variable: IDENTIFIER
  130         | indexed_component
  131         | selected_component


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 4 5 49 80 82 83 84
')' (41) 3 4 5 49 80 82 83 84
'*' (42) 65
'+' (43) 11 127
',' (44) 44 54
'-' (45) 12 128
'.' (46) 100
'/' (47) 66
':' (58) 17 68 69
';' (59) 1 8 13 17 28 56 60 67 68 70 81 82 83 84 85 98 99 113 114 119
'<' (60) 93
'=' (61) 92
'>' (62) 94
'[' (91) 57
']' (93) 57
'|' (124) 35
error (256)
AND (258) 58
ARRAY (259) 5
BEGIN_ (260) 1 113 114
CASE (261) 13
CONSTANT (262) 24
ELSE (263) 40
ELSIF (264) 42
END (265) 1 13 56 60 87 113 114
FUNCTION (266) 53
IF (267) 56
IDENTIFIER (268) 1 13 17 51 52 53 54 57 68 69 81 86 100 113 119 126
    129
IN (269) 62 63
IS (270) 1 13 112 119
LOOP (271) 60
NOT (272) 48
NULL_ (273) 67 76
OF (274) 5
OR (275) 59
OTHERS (276) 34
OUT (277) 61 62
PROCEDURE (278) 1 86
RECORD (279) 87
RETURN (280) 53 98 99
THEN (281) 42 56
TYPE (282) 119
WHEN (283) 14
WHILE (284) 60
ARROW (285) 14
ASSIGNMENT_OP (286) 6 8
NOT_EQUAL_OP (287) 95
GREATER_EQUAL_OP (288) 97
LESSER_EQUAL_OP (289) 96
POWER_OP (290) 47
PUT (291) 82 83
GET (292) 84
LENGTH (293) 52
NEW_LINE (294) 85
CONCAT (295)
INTEGER_TYPE (296) 33 120
REAL_TYPE (297) 121
CHARACTER_TYPE (298) 122
BOOLEAN_TYPE (299) 123
INTEGER_LITERAL (300) 72
FLOAT_LITERAL (301) 73
CHARACTER_LITERAL (302) 74
STRING_LITERAL (303) 77 82
BOOLEAN_LITERAL (304) 75


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
main (67)
    on left: 1, on right: 0
actual_parameter_list (68)
    on left: 2, on right: 4
actual_parameter_part (69)
    on left: 3 4, on right: 51 81
array_type_definition (70)
    on left: 5, on right: 124
assign_expression (71)
    on left: 6 7, on right: 17 68 69
assignment_statement (72)
    on left: 8, on right: 23
binary_adding_list (73)
    on left: 9 10, on right: 10 103 105
binary_adding_operator (74)
    on left: 11 12, on right: 9 10
case_statement (75)
    on left: 13, on right: 22
case_statement_alternative (76)
    on left: 14, on right: 15
case_statement_alternative_list (77)
    on left: 15 16, on right: 13 15
component_item (78)
    on left: 17, on right: 18
component_list (79)
    on left: 18 19, on right: 18 87
compound_statement (80)
    on left: 20 21 22 23, on right: 111
constant (81)
    on left: 24 25, on right: 68
declarative_item (82)
    on left: 26 27 28 29, on right: 30
declarative_part (83)
    on left: 30 31, on right: 1 30 113 114
discrete_choice (84)
    on left: 32 33 34, on right: 35 36
discrete_choice_list (85)
    on left: 35 36 37, on right: 14 35
elsif_list (86)
    on left: 38 39, on right: 38 56
else_statement (87)
    on left: 40 41, on right: 56
elsif_statement (88)
    on left: 42, on right: 38
expression (89)
    on left: 43, on right: 2 5 6 8 32 42 44 56 57 60 80
expression_list (90)
    on left: 44 45, on right: 2 5 44 57
factor (91)
    on left: 46 47 48, on right: 117 118
formal_part (92)
    on left: 49 50, on right: 53 86
function_call (93)
    on left: 51 52, on right: 79
function_specification (94)
    on left: 53, on right: 116
identifier_list (95)
    on left: 54 55, on right: 17 54 68 69
if_statement (96)
    on left: 56, on right: 20
indexed_component (97)
    on left: 57, on right: 130
logical_operator (98)
    on left: 58 59, on right: 90
loop_statement (99)
    on left: 60, on right: 21
mode (100)
    on left: 61 62 63 64, on right: 69
multiplying_operator (101)
    on left: 65 66, on right: 118
null_statement (102)
    on left: 67, on right: 107
object_declaration (103)
    on left: 68, on right: 27
parameter_specification (104)
    on left: 69, on right: 49 70
parameter_specification_list (105)
    on left: 70 71, on right: 49 70
primary (106)
    on left: 72 73 74 75 76 77 78 79 80, on right: 46 47 48
procedure_call_statement (107)
    on left: 81 82 83 84 85, on right: 109
procedure_specification (108)
    on left: 86, on right: 115
record_type_definition (109)
    on left: 87, on right: 125
relation (110)
    on left: 88 89, on right: 43 90
relation_list (111)
    on left: 90 91, on right: 43 90
relational_operator (112)
    on left: 92 93 94 95 96 97, on right: 89
return_statement (113)
    on left: 98 99, on right: 108
selected_component (114)
    on left: 100, on right: 131
sequence_of_statements (115)
    on left: 101 102, on right: 1 14 40 42 56 60 102 113 114
simple_expression (116)
    on left: 103 104 105 106, on right: 88 89 99
simple_statement (117)
    on left: 107 108 109, on right: 110
statement (118)
    on left: 110 111, on right: 101 102
subprogram_body_ (119)
    on left: 112, on right: 113 114
subprogram_body (120)
    on left: 113 114, on right: 29
subprogram_specification (121)
    on left: 115 116, on right: 28 112
term (122)
    on left: 117 118, on right: 9 10 103 104 105 106 118
type_declaration (123)
    on left: 119, on right: 26
type_definition (124)
    on left: 120 121 122 123 124 125 126, on right: 5 17 53 68 69 119
unary_adding_operator (125)
    on left: 127 128, on right: 103 104
variable (126)
    on left: 129 130 131, on right: 8 78 83 84 100


state 0

    0 $accept: . main $end
    1 main: . PROCEDURE IDENTIFIER IS declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'

    PROCEDURE  shift, and go to state 1

    main  go to state 2


state 1

    1 main: PROCEDURE . IDENTIFIER IS declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: main . $end

    $end  shift, and go to state 4


state 3

    1 main: PROCEDURE IDENTIFIER . IS declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'

    IS  shift, and go to state 5


state 4

    0 $accept: main $end .

    $default  accept


state 5

    1 main: PROCEDURE IDENTIFIER IS . declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
   26 declarative_item: . type_declaration
   27                 | . object_declaration
   28                 | . subprogram_specification ';'
   29                 | . subprogram_body
   30 declarative_part: . declarative_item declarative_part
   31                 | .  [BEGIN_]
   53 function_specification: . FUNCTION IDENTIFIER formal_part RETURN type_definition
   68 object_declaration: . IDENTIFIER identifier_list ':' constant type_definition assign_expression ';'
   86 procedure_specification: . PROCEDURE IDENTIFIER formal_part
  112 subprogram_body_: . subprogram_specification IS
  113 subprogram_body: . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
  114                | . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END ';'
  115 subprogram_specification: . procedure_specification
  116                         | . function_specification
  119 type_declaration: . TYPE IDENTIFIER IS type_definition ';'

    FUNCTION    shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    PROCEDURE   shift, and go to state 8
    TYPE        shift, and go to state 9

    $default  reduce using rule 31 (declarative_part)

    declarative_item          go to state 10
    declarative_part          go to state 11
    function_specification    go to state 12
    object_declaration        go to state 13
    procedure_specification   go to state 14
    subprogram_body_          go to state 15
    subprogram_body           go to state 16
    subprogram_specification  go to state 17
    type_declaration          go to state 18


state 6

   53 function_specification: FUNCTION . IDENTIFIER formal_part RETURN type_definition

    IDENTIFIER  shift, and go to state 19


state 7

   54 identifier_list: . ',' IDENTIFIER identifier_list
   55                | .  [':']
   68 object_declaration: IDENTIFIER . identifier_list ':' constant type_definition assign_expression ';'

    ','  shift, and go to state 20

    $default  reduce using rule 55 (identifier_list)

    identifier_list  go to state 21


state 8

   86 procedure_specification: PROCEDURE . IDENTIFIER formal_part

    IDENTIFIER  shift, and go to state 22


state 9

  119 type_declaration: TYPE . IDENTIFIER IS type_definition ';'

    IDENTIFIER  shift, and go to state 23


state 10

   26 declarative_item: . type_declaration
   27                 | . object_declaration
   28                 | . subprogram_specification ';'
   29                 | . subprogram_body
   30 declarative_part: . declarative_item declarative_part
   30                 | declarative_item . declarative_part
   31                 | .  [BEGIN_]
   53 function_specification: . FUNCTION IDENTIFIER formal_part RETURN type_definition
   68 object_declaration: . IDENTIFIER identifier_list ':' constant type_definition assign_expression ';'
   86 procedure_specification: . PROCEDURE IDENTIFIER formal_part
  112 subprogram_body_: . subprogram_specification IS
  113 subprogram_body: . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
  114                | . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END ';'
  115 subprogram_specification: . procedure_specification
  116                         | . function_specification
  119 type_declaration: . TYPE IDENTIFIER IS type_definition ';'

    FUNCTION    shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    PROCEDURE   shift, and go to state 8
    TYPE        shift, and go to state 9

    $default  reduce using rule 31 (declarative_part)

    declarative_item          go to state 10
    declarative_part          go to state 24
    function_specification    go to state 12
    object_declaration        go to state 13
    procedure_specification   go to state 14
    subprogram_body_          go to state 15
    subprogram_body           go to state 16
    subprogram_specification  go to state 17
    type_declaration          go to state 18


state 11

    1 main: PROCEDURE IDENTIFIER IS declarative_part . BEGIN_ sequence_of_statements END IDENTIFIER ';'

    BEGIN_  shift, and go to state 25


state 12

  116 subprogram_specification: function_specification .

    $default  reduce using rule 116 (subprogram_specification)


state 13

   27 declarative_item: object_declaration .

    $default  reduce using rule 27 (declarative_item)


state 14

  115 subprogram_specification: procedure_specification .

    $default  reduce using rule 115 (subprogram_specification)


state 15

   26 declarative_item: . type_declaration
   27                 | . object_declaration
   28                 | . subprogram_specification ';'
   29                 | . subprogram_body
   30 declarative_part: . declarative_item declarative_part
   31                 | .  [BEGIN_]
   53 function_specification: . FUNCTION IDENTIFIER formal_part RETURN type_definition
   68 object_declaration: . IDENTIFIER identifier_list ':' constant type_definition assign_expression ';'
   86 procedure_specification: . PROCEDURE IDENTIFIER formal_part
  112 subprogram_body_: . subprogram_specification IS
  113 subprogram_body: . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
  113                | subprogram_body_ . declarative_part BEGIN_ sequence_of_statements END IDENTIFIER ';'
  114                | . subprogram_body_ declarative_part BEGIN_ sequence_of_statements END ';'
  114                | subprogram_body_ . declarative_part BEGIN_ sequence_of_statements END ';'
  115 subprogram_specification: . procedure_specification
  116                         | . function_specification
  119 type_declaration: . TYPE IDENTIFIER IS type_definition ';'

    FUNCTION    shift, and go to state 6
    IDENTIFIER  shift, and go to state 7
    PROCEDURE   shift, and go to state 8
    TYPE        shift, and go to state 9

    $default  reduce using rule 31 (declarative_part)

    declarative_item          go to state 10
    declarative_part          go to state 26
    function_specification    go to state 12
    object_declaration        go to state 13
    procedure_specification   go to state 14
    subprogram_body_          go to state 15
    subprogram_body           go to state 16
    subprogram_specification  go to state 17
    type_declaration          go to state 18


state 16

   29 declarative_item: subprogram_body .

    $default  reduce using rule 29 (declarative_item)


state 17

   28 declarative_item: subprogram_specification . ';'
  112 subprogram_body_: subprogram_specification . IS

    IS   shift, and go to state 27
    ';'  shift, and go to state 28


state 18

   26 declarative_item: type_declaration .

    $default  reduce using rule 26 (declarative_item)


state 19

   49 formal_part: . '(' parameter_specification parameter_specification_list ')'
   50            | .  [RETURN]
   53 function_specification: FUNCTION IDENTIFIER . formal_part RETURN type_definition

    '('  shift, and go to state 29

    $default  reduce using rule 50 (formal_part)

    formal_part  go to state 30


state 20

   54 identifier_list: ',' . IDENTIFIER identifier_list

    IDENTIFIER  shift, and go to state 31


state 21

   68 object_declaration: IDENTIFIER identifier_list . ':' constant type_definition assign_expression ';'

    ':'  shift, and go to state 32


state 22

   49 formal_part: . '(' parameter_specification parameter_specification_list ')'
   50            | .  [IS, ';']
   86 procedure_specification: PROCEDURE IDENTIFIER . formal_part

    '('  shift, and go to state 29

    $default  reduce using rule 50 (formal_part)

    formal_part  go to state 33


state 23

  119 type_declaration: TYPE IDENTIFIER . IS type_definition ';'

    IS  shift, and go to state 34


state 24

   30 declarative_part: declarative_item declarative_part .

    $default  reduce using rule 30 (declarative_part)


state 25

    1 main: PROCEDURE IDENTIFIER IS declarative_part BEGIN_ . sequence_of_statements END IDENTIFIER ';'
    8 assignment_statement: . variable ASSIGNMENT_OP expression ';'
   13 case_statement: . CASE IDENTIFIER IS case_statement_alternative_list END CASE ';'
   20 compound_statement: . if_statement
   21                   | . loop_statement
   22                   | . case_statement
   23                   | . assignment_statement
   56 if_statement: . IF expression THEN sequence_of_statements elsif_list else_statement END IF ';'
   57 indexed_component: . IDENTIFIER '[' expression expression_list ']'
   60 loop_statement: . WHILE expression LOOP sequence_of_statements END LOOP ';'
   67 null_statement: . NULL_ ';'
   81 procedure_call_statement: . IDENTIFIER actual_parameter_part ';'
   82                         | . PUT '(' STRING_LITERAL ')' ';'
   83                         | . PUT '(' variable ')' ';'
   84                         | . GET '(' variable ')' ';'
   85                         | . NEW_LINE ';'
   98 return_statement: . RETURN ';'
   99                 | . RETURN simple_expression ';'
  100 selected_component: . variable '.' IDENTIFIER
  101 sequence_of_statements: . statement
  102                       | . statement sequence_of_statements
  107 simple_statement: . null_statement
  108                 | . return_statement
  109                 | . procedure_call_statement
  110 statement: . simple_statement
  111          | . compound_statement
  129 variable: . IDENTIFIER
  130         | . indexed_component
  131         | . selected_component

    CASE        shift, and go to state 35
    IF          shift, and go to state 36
    IDENTIFIER  shift, and go to state 37
    NULL_       shift, and go to state 38
    RETURN      shift, and go to state 39
    WHILE       shift, and go to state 40
    PUT         shift, and go to state 41
    GET         shift, and go to state 42
    NEW_LINE    shift, and go to state 43

    assignment_statement      go to state 44
    case_statement            go to state 45
    compound_statement        go to state 46
    if_statement              go to state 47
    indexed_component         go to state 48
    loop_statement            go to state 49
    null_statement            go to state 50
    procedure_call_statement  go to state 51
    return_statement          go to state 52
    selected_component        go to state 53
    sequence_of_statements    go to state 54
    simple_statement          go to state 55
    statement                 go to state 56
    variable                  go to state 57


state 26

  113 subprogram_body: subprogram_body_ declarative_part . BEGIN_ sequence_of_statements END IDENTIFIER ';'
  114                | subprogram_body_ declarative_part . BEGIN_ sequence_of_statements END ';'

    BEGIN_  shift, and go to state 58


state 27

  112 subprogram_body_: subprogram_specification IS .

    $default  reduce using rule 112 (subprogram_body_)


state 28

   28 declarative_item: subprogram_specification ';' .

    $default  reduce using rule 28 (declarative_item)


state 29

   49 formal_part: '(' . parameter_specification parameter_specification_list ')'
   69 parameter_specification: . IDENTIFIER identifier_list ':' mode type_definition assign_expression

    IDENTIFIER  shift, and go to state 59

    parameter_specification  go to state 60


state 30

   53 function_specification: FUNCTION IDENTIFIER formal_part . RETURN type_definition

    RETURN  shift, and go to state 61


state 31

   54 identifier_list: . ',' IDENTIFIER identifier_list
   54                | ',' IDENTIFIER . identifier_list
   55                | .  [':']

    ','  shift, and go to state 20

    $default  reduce using rule 55 (identifier_list)

    identifier_list  go to state 62


state 32

   24 constant: . CONSTANT
   25         | .  [ARRAY, IDENTIFIER, RECORD, INTEGER_TYPE, REAL_TYPE, CHARACTER_TYPE, BOOLEAN_TYPE]
   68 object_declaration: IDENTIFIER identifier_list ':' . constant type_definition assign_expression ';'

    CONSTANT  shift, and go to state 63

    $default  reduce using rule 25 (constant)

    constant  go to state 64


state 33

   86 procedure_specification: PROCEDURE IDENTIFIER formal_part .

    $default  reduce using rule 86 (procedure_specification)


state 34

    5 array_type_definition: . ARRAY '(' expression expression_list ')' OF type_definition
   87 record_type_definition: . RECORD component_list END RECORD
  119 type_declaration: TYPE IDENTIFIER IS . type_definition ';'
  120 type_definition: . INTEGER_TYPE
  121                | . REAL_TYPE
  122                | . CHARACTER_TYPE
  123                | . BOOLEAN_TYPE
  124                | . array_type_definition
  125                | . record_type_definition
  126                | . IDENTIFIER

    ARRAY           shift, and go to state 65
    IDENTIFIER      shift, and go to state 66
    RECORD          shift, and go to state 67
    INTEGER_TYPE    shift, and go to state 68
    REAL_TYPE       shift, and go to state 69
    CHARACTER_TYPE  shift, and go to state 70
    BOOLEAN_TYPE    shift, and go to state 71

    array_type_definition   go to state 72
    record_type_definition  go to state 73
    type_definition         go to state 74


state 35

   13 case_statement: CASE . IDENTIFIER IS case_statement_alternative_list END CASE ';'

    IDENTIFIER  shift, and go to state 75


state 36

   43 expression: . relation relation_list
   46 factor: . primary
   47       | . primary POWER_OP primary
   48       | . NOT primary
   51 function_call: . IDENTIFIER actual_parameter_part
   52              | . IDENTIFIER LENGTH
   56 if_statement: IF . expression THEN sequence_of_statements elsif_list else_statement END IF ';'
   57 indexed_component: . IDENTIFIER '[' expression expression_list ']'
   72 primary: . INTEGER_LITERAL
   73        | . FLOAT_LITERAL
   74        | . CHARACTER_LITERAL
   75        | . BOOLEAN_LITERAL
   76        | . NULL_
   77        | . STRING_LITERAL
   78        | . variable
   79        | . function_call
   80        | . '(' expression ')'
   88 relation: . simple_expression
   89         | . simple_expression relational_operator simple_expression
  100 selected_component: . variable '.' IDENTIFIER
  103 simple_expression: . unary_adding_operator term binary_adding_list
  104                  | . unary_adding_operator term
  105                  | . term binary_adding_list
  106                  | . term
  117 term: . factor
  118     | . term multiplying_operator factor
  127 unary_adding_operator: . '+'
  128                      | . '-'
  129 variable: . IDENTIFIER
  130         | . indexed_component
  131         | . selected_component

    IDENTIFIER         shift, and go to state 76
    NOT                shift, and go to state 77
    NULL_              shift, and go to state 78
    '+'                shift, and go to state 79
    '-'                shift, and go to state 80
    INTEGER_LITERAL    shift, and go to state 81
    FLOAT_LITERAL      shift, and go to state 82
    CHARACTER_LITERAL  shift, and go to state 83
    STRING_LITERAL     shift, and go to state 84
    BOOLEAN_LITERAL    shift, and go to state 85
    '('                shift, and go to state 86

    expression             go to state 87
    factor                 go to state 88
    function_call          go to state 89
    indexed_component      go to state 48
    primary                go to state 90
    relation               go to state 91
    selected_component     go to state 53
    simple_expression      go to state 92
    term                   go to state 93
    unary_adding_operator  go to state 94
    variable               go to state 95


state 37

    3 actual_parameter_part: . '(' ')'
    4                      | . '(' actual_parameter_list ')'
   57 indexed_component: IDENTIFIER . '[' expression expression_list ']'
   81 procedure_call_statement: IDENTIFIER . actual_parameter_part ';'
  129 variable: IDENTIFIER .  [ASSIGNMENT_OP, '.']

    '('  shift, and go to state 96
    '['  shift, and go to state 97

    $default  reduce using rule 129 (variable)

    actual_parameter_part  go to state 98


state 38

   67 null_statement: NULL_ . ';'

    ';'  shift, and go to state 99


state 39

   46 factor: . primary
   47       | . primary POWER_OP primary
   48       | . NOT primary
   51 function_call: . IDENTIFIER actual_parameter_part
   52              | . IDENTIFIER LENGTH
   57 indexed_component: . IDENTIFIER '[' expression expression_list ']'
   72 primary: . INTEGER_LITERAL
   73        | . FLOAT_LITERAL
   74        | . CHARACTER_LITERAL
   75        | . BOOLEAN_LITERAL
   76        | . NULL_
   77        | . STRING_LITERAL
   78        | . variable
   79        | . function_call
   80        | . '(' expression ')'
   98 return_statement: RETURN . ';'
   99                 | RETURN . simple_expression ';'
  100 selected_component: . variable '.' IDENTIFIER
  103 simple_expression: . unary_adding_operator term binary_adding_list
  104                  | . unary_adding_operator term
  105                  | . term binary_adding_list
  106                  | . term
  117 term: . factor
  118     | . term multiplying_operator factor
  127 unary_adding_operator: . '+'
  128                      | . '-'
  129 variable: . IDENTIFIER
  130         | . indexed_component
  131         | . selected_component

    IDENTIFIER         shift, and go to state 76
    NOT                shift, and go to state 77
    NULL_              shift, and go to state 78
    '+'                shift, and go to state 79
    '-'                shift, and go to state 80
    INTEGER_LITERAL    shift, and go to state 81
    FLOAT_LITERAL      shift, and go to state 82
    CHARACTER_LITERAL  shift, and go to state 83
    STRING_LITERAL     shift, and go to state 84
    BOOLEAN_LITERAL    shift, and go to state 85
    ';'                shift, and go to state 100
    '('                shift, and go to state 86

    factor                 go to state 88
    function_call          go to state 89
    indexed_component      go to state 48
    primary                go to state 90
    selected_component     go to state 53
    simple_expression      go to state 101
    term                   go to state 93
    unary_adding_operator  go to state 94
    variable               go to state 95


state 40

   43 expression: . relation relation_list
   46 factor: . primary
   47       | . primary POWER_OP primary
   48       | . NOT primary
   51 function_call: . IDENTIFIER actual_parameter_part
   52              | . IDENTIFIER LENGTH
   57 indexed_component: . IDENTIFIER '[' expression expression_list ']'
   60 loop_statement: WHILE . expression LOOP sequence_of_statements END LOOP ';'
   72 primary: . INTEGER_LITERAL
   73        | . FLOAT_LITERAL
   74        | . CHARACTER_LITERAL
   75        | . BOOLEAN_LITERAL
   76        | . NULL_
   77        | . STRING_LITERAL
   78        | . variable
   79        | . function_call
   80        | . '(' expression ')'
   88 relation: . simple_expression
   89         | . simple_expression relational_operator simple_expression
  100 selected_component: . variable '.' IDENTIFIER
  103 simple_expression: . unary_adding_operator term binary_adding_list
  104                  | . unary_adding_operator term
  105                  | . term binary_adding_list
  106                  | . term
  117 term: . factor
  118     | . term multiplying_operator factor
  127 unary_adding_operator: . '+'
  128                      | . '-'
  129 variable: . IDENTIFIER
  130         | . indexed_component
  131         | . selected_component

    IDENTIFIER         shift, and go to state 76
    NOT                shift, and go to state 77
    NULL_              shift, and go to state 78
    '+'                shift, and go to state 79
    '-'                shift, and go to state 80
    INTEGER_LITERAL    shift, and go to state 81
    FLOAT_LITERAL      shift, and go to state 82
    CHARACTER_LITERAL  shift, and go to state 83
    STRING_LITERAL     shift, and go to state 84
    BOOLEAN_LITERAL    shift, and go to state 85
    '('                shift, and go to state 86

    expression             go to state 102
    factor                 go to state 88
    function_call          go to state 89
    indexed_component      go to state 48
    primary                go to state 90
    relation               go to state 91
    selected_component     go to state 53
    simple_expression      go to state 92
    term                   go to state 93
    unary_adding_operator  go to state 94
    variable               go to state 95


state 41

   82 procedure_call_statement: PUT . '(' STRING_LITERAL ')' ';'
   83                         | PUT . '(' variable ')' ';'

    '('  shift, and go to state 103


state 42

   84 procedure_call_statement: GET . '(' variable ')' ';'

    '('  shift, and go to state 104


state 43

   85 procedure_call_statement: NEW_LINE . ';'

    ';'  shift, and go to state 105


state 44

   23 compound_statement: assignment_statement .

    $default  reduce using rule 23 (compound_statement)


state 45

   22 compound_statement: case_statement .

    $default  reduce using rule 22 (compound_statement)


state 46

  111 statement: compound_statement .

    $default  reduce using rule 111 (statement)


state 47

   20 compound_statement: if_statement .

    $default  reduce using rule 20 (compound_statement)


state 48

  130 variable: indexed_component .

    $default  reduce using rule 130 (variable)


state 49

   21 compound_statement: loop_statement .

    $default  reduce using rule 21 (compound_statement)


state 50

  107 simple_statement: null_statement .

    $default  reduce using rule 107 (simple_statement)


state 51

  109 simple_statement: procedure_call_statement .

    $default  reduce using rule 109 (simple_statement)


state 52

  108 simple_statement: return_statement .

    $default  reduce using rule 108 (simple_statement)


state 53

  131 variable: selected_component .

    $default  reduce using rule 131 (variable)


state 54

    1 main: PROCEDURE IDENTIFIER IS declarative_part BEGIN_ sequence_of_statements . END IDENTIFIER ';'

    END  shift, and go to state 106


state 55

  110 statement: simple_statement .

    $default  reduce using rule 110 (statement)


state 56

    8 assignment_statement: . variable ASSIGNMENT_OP expression ';'
   13 case_statement: . CASE IDENTIFIER IS case_statement_alternative_list END CASE ';'
   20 compound_statement: . if_statement
   21                   | . loop_statement
   22                   | . case_statement
   23                   | . assignment_statement
   56 if_statement: . IF expression THEN sequence_of_statements elsif_list else_statement END IF ';'
   57 indexed_component: . IDENTIFIER '[' expression expression_list ']'
   60 loop_statement: . WHILE expression LOOP sequence_of_statements END LOOP ';'
   67 null_statement: . NULL_ ';'
   81 procedure_call_statement: . IDENTIFIER actual_parameter_part ';'
   82                         | . PUT '(' STRING_LITERAL ')' ';'
   83                         | . PUT '(' variable ')' ';'
   84                         | . GET '(' variable ')' ';'
   85                         | . NEW_LINE ';'
   98 return_statement: . RETURN ';'
   99                 | . RETURN simple_expression ';'
  100 selected_component: . variable '.' IDENTIFIER
  101 sequence_of_statements: . statement
  101                       | statement .  [ELSE, ELSIF, END, WHEN]
  102                       | . statement sequence_of_statements
  102                       | statement . sequence_of_statements
  107 simple_statement: . null_statement
  108                 | . return_statement
  109                 | . procedure_call_statement
  110 statement: . simple_statement
  111          | . compound_statement
  129 variable: . IDENTIFIER
  130         | . indexed_component
  131         | . selected_component

    CASE        shift, and go to state 35
    IF          shift, and go to state 36
    IDENTIFIER  shift, and go to state 37
    NULL_       shift, and go to state 38
    RETURN      shift, and go to state 39
    WHILE       shift, and go to state 40
    PUT         shift, and go to state 41
    GET         shift, and go to state 42
    NEW_LINE    shift, and go to state 43

    $default  reduce using rule 101 (sequence_of_statements)
